# html_analyzer

./: .gitignore  CMakeLists.txt  GetUrlContent.cpp  GetUrlContent.hpp  HtmlParser.cpp  HtmlParser.hpp  README.md  Urls.txt  build.bat  main.cpp  root_certificates.hpp
